--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -9,9 +9,10 @@
     tools:showIn="@layout/activity_main">
 
     <TextView
+        android:id="@+id/large_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/text_margin"
-        android:text="@string/large_text" />
+         />
 
 </android.support.v4.widget.NestedScrollView>
