Fix padding on map and fix map text

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,7 @@
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
             app:contentScrim="?attr/colorPrimary"
+            app:expandedTitleTextAppearance="@style/AppTheme.TrackerTitle"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <com.google.android.gms.maps.MapView
