--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,4 +17,8 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="AppTheme.TrackerTitle" parent="@style/TextAppearance.AppCompat.Title">
+        <item name="android:textColor">@color/primaryText</item>
+    </style>
+
 </resources>
